[tool.poetry]
authors = [
  "DrunkSimurgh <saman.9267@gmail.com>",
  "SSgumS <sssafais@hotmail.com>",
]
description = "Python + Aegisub"
name = "Pyegi"
version = "0.1.0"

[tool.poetry.dependencies]
Pillow = "9.*"
PyQt6 = "6.5.*"
beautifulsoup4 = "4.*"
numpy = "1.*"
poetry-core = "1.6.*"
pyonfx = "0.9.*"
pyqtdarktheme = "2.*"
python = ">=3.9,<3.11"
requests = "2.*"

[tool.poetry.group.dev.dependencies]
PyQt5Designer = "5.*" 
appdirs = "1.*" # installed on embedded pythons
black = "*" 
pypyr = "5.*" 
toml = "0.*" # installed on embedded pythons

[tool.pyegi]
describer-version = "0.1.0"
known-feeds = [
  "https://github.com/SSgumS/Pyegi/tree/main/src/dependency/Pyegi/PythonScripts/%5Bsample%5D%20All%20the%20Lua%20GUI%20elements",
  "https://github.com/SSgumS/Pyegi/tree/main/src/dependency/Pyegi/PythonScripts/%5Bsample%5D%20prefix",
  "https://github.com/DrunkSimurgh/Pyegi_Scripts/tree/main/ColorMania",
  "https://github.com/DrunkSimurgh/Pyegi_Scripts/tree/main/Disintegration",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
