[tool.poetry]
authors = [
  "DrunkSimurgh <saman.9267@gmail.com>",
  "SSgumS <sssafais@hotmail.com>"
]
description = "Python + Aegisub"
name = "Pyegi"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Pillow = "^9.0.1"
pyonfx = "^0.9.12"
PyQt5 = "^5.15.6"
PyQt5Designer = "^5.14.1"
PyQt6 = "^6.2.3"

[tool.poetry.dev-dependencies]
pypyr = "^5.1.0"
appdirs = "^1.4.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
