[tool.poetry]
authors = [
  "DrunkSimurgh <saman.9267@gmail.com>",
  "SSgumS <sssafais@hotmail.com>",
]
description = "Does some types of color gradients on the lines."
name = "ColorMania"
version = "0.0.1"

[tool.poetry.dependencies]
pyonfx = "^0.9.13"
python = ">=3.9,<3.10"

[tool.poetry.dev-dependencies]

[tool.pyegi]
describer-version = "0.1.0"
name = "[sample] ColorMania"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
