[tool.poetry]
authors = [
  "DrunkSimurgh <saman.9267@gmail.com>",
  "SSgumS <sssafais@hotmail.com>",
]
description = "Converts line to pixels and moves the pixels."
name = "Disintegration"
version = "0.0.1"

[tool.poetry.dependencies]
pyonfx = "^0.9.13"
python = ">=3.9,<3.10"

[tool.poetry.dev-dependencies]

[tool.pyegi]
describer-version = "0.1.0"
name = "[sample] Disintegration"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
