[tool.poetry]
authors = [
  "DrunkSimurgh <saman.9267@gmail.com>",
  "SSgumS <sssafais@hotmail.com>",
]
description = "Adds {Pyegi} to the beginning of desired lines."
name = "prefix"
version = "0.0.1"

[tool.poetry.dependencies]
pyonfx = "^0.9.13"
python = ">=3.9,<3.10"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
