[tool.poetry]
authors = [
  "DrunkSimurgh <saman.9267@gmail.com>",
  "SSgumS <sssafais@hotmail.com>",
]
description = "Adds {Pyegi} to the beginning of desired lines."
name = "[sample] prefix"
version = "0.0.2"

[tool.poetry.dependencies]
pyonfx = "^0.9.13"
python = ">=3.9,<3.10"

[tool.poetry.group.dev.dependencies]

[tool.pyegi]
authors = [
  "DrunkSimurgh <saman.9267@gmail.com>",
  "SSgumS <sssafais@hotmail.com>",
]
describer-version = "0.1.0"
description = "Adds {Pyegi} to the beginning of desired lines."
discoverable = true
known-feeds = []
name = "[sample] prefix"
version = "0.0.2"
version-description = "Fill Space"

[tool.pyegi.files]
keep = []

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
